# Capstone-LaskarAI

./: README.md  app.py  environment.yml  notebook.ipynb  pyproject.toml  requirements.txt
.streamlit/: config.toml
logs/fine_tuning/train/: events.out.tfevents.1749313713.b3191b548039.237.2.v2
logs/fine_tuning/validation/: events.out.tfevents.1749313963.b3191b548039.237.3.v2
logs/train/: events.out.tfevents.1749756097.67f780bbf1d1.16104.0.v2
logs/transfer_learning/train/: events.out.tfevents.1749310250.b3191b548039.237.0.v2
logs/transfer_learning/validation/: events.out.tfevents.1749310450.b3191b548039.237.1.v2
logs/validation/: events.out.tfevents.1749756309.67f780bbf1d1.16104.1.v2
