[project]
name = "capstone-laskarai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.12"
dependencies = [
    "kagglehub>=0.3.12",
    "matplotlib>=3.10.3",
    "numpy>=2.1.3",
    "pillow>=11.2.1",
    "scipy>=1.15.3",
    "streamlit>=1.45.1",
    "tensorflow>=2.19.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
